backend login and signup routes

--- a/BACKEND/config/.env
+++ b/BACKEND/config/.env
@@ -1,1 +1,2 @@
-DATABASE_URL = mongodb+srv://Parth:Parth200@cluster0.6hf9233.mongodb.net
+SECRET_KEY = JAYJAYSHREERADHE
+DATABASE_URL = mongodb+srv://Parth:Parth200@cluster1.2aat9ep.mongodb.net/Blogify
