--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -13,6 +13,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^8.1.2"
+    "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.0",
+    "mongoose": "^8.1.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
