--- a/BACKEND/config/.env
+++ b/BACKEND/config/.env
@@ -1,2 +1,2 @@
 SECRET_KEY = JAYJAYSHREERADHE
-DATABASE_URL = mongodb+srv://Parth:Parth200@cluster1.2aat9ep.mongodb.net/Blogify
+DATABASE_URL = mongodb+srv://Parth:Parth200@cluster1.2aat9ep.mongodb.net/Blogif
