Add Post Frontend

--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.0",
     "@splidejs/react-splide": "^0.7.12",
+    "@tinymce/tinymce-react": "^4.3.2",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
