--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.0",
     "@splidejs/react-splide": "^0.7.12",
     "@tinymce/tinymce-react": "^4.3.2",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
