--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -15,6 +15,7 @@
     "@tinymce/tinymce-react": "^4.3.2",
     "animate.css": "^4.1.1",
     "axios": "^1.6.7",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
