--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^2.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.0",
